<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数据存储</string>
    <string name="action_settings">Settings</string>
	<string name="user_name">用户名:</string>
    <string name="password">密码:</string>
    <string name="repasswd">密码确认:</string>
    <string name="btnreset">重置</string>
    <string name="btnregister">注册</string>
    <string name="btnlogin">登陆</string>
    <string name="email">邮箱:</string>
    <string name="passwd_status">密码状态</string>
    <string name="email_status">邮箱状态</string>
    <string name="username_status">用户名状态</string>
    <string name="data">数据存储</string>
    <string name="btnback">返回</string>
    <string name="tv_resetnumber">重设电话号码:</string>
    <string name="tv_confirmnumber">电话号码确认:</string>
    <string name="btnok">确定</string>
    <string name="tv_orgnumber">原号码:</string>
</resources>
