<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lab220.datastorage.MainActivity$PlaceholderFragment" >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView
	            android:id="@+id/tv_username"
	            android:layout_width="60dip"
	            android:layout_height="wrap_content"
	            android:text="@string/user_name" />
            <EditText
	            android:id="@+id/et_username"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="textPersonName" >
            	<requestFocus />
        	</EditText>
        	<ImageView
                android:id="@+id/img_username"
                android:layout_width="18dip"
                android:layout_height="match_parent"
                android:src="@drawable/ok" 
                android:contentDescription="@string/username_status"/>
        </LinearLayout>
        
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView
	            android:id="@+id/tv_password"
	            android:layout_width="60dip"
	            android:layout_height="wrap_content"
	            android:text="@string/password" />
            <EditText
	            android:id="@+id/et_password"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="textPassword" >
        	</EditText>
        	<ImageView
                android:id="@+id/img_passwd"
                android:layout_width="18dip"
                android:layout_height="match_parent"
                android:src="@drawable/ok" 
                android:contentDescription="@string/passwd_status"/>
        </LinearLayout>
        
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:text="@string/btnregister">
            </Button> 
            <Button
                android:id="@+id/btn_reset"
                android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:text="@string/btnreset">
            </Button>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
	        	android:text="@string/btnlogin">
            </Button> 
        </LinearLayout>
         
        <ImageView 
             android:id="@+id/img_data"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:src="@drawable/data"
             android:contentDescription="@string/data"/>
    </LinearLayout>
</RelativeLayout>
