<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <LinearLayout
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"  >
    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/tv_username_reg"
	            android:layout_width="60dip"
	            android:layout_height="wrap_content"
	            android:text="@string/user_name" />
	
	        <EditText
	            android:id="@+id/et_username_reg"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="textPersonName" >
	            <requestFocus />
	        </EditText>
	
	        <ImageView
	            android:id="@+id/img_username_reg"
	            android:layout_width="18dip"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/username_status"
	            android:src="@drawable/ok" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/tv_password_reg"
	            android:layout_width="60dip"
	            android:layout_height="wrap_content"
	            android:text="@string/password" />
	
	        <EditText
	            android:id="@+id/et_password_reg"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="textPassword" >
	        </EditText>
	
	        <ImageView
	            android:id="@+id/img_passwd_reg"
	            android:layout_width="18dip"
	            android:layout_height="match_parent"
	            android:contentDescription="@string/passwd_status"
	            android:src="@drawable/ok" />
	    </LinearLayout>
	    <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:id="@+id/tv_repassword_reg"
	                android:layout_width="60dip"
	                android:layout_height="wrap_content"
	                android:text="@string/repasswd" />
	
	            <EditText
	                android:id="@+id/et_repassword_reg"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="textPassword" >
	            </EditText>
	
	            <ImageView
	                android:id="@+id/img_repasswd_reg"
	                android:layout_width="18dip"
	                android:layout_height="match_parent"
	                android:contentDescription="@string/passwd_status"
	                android:src="@drawable/ok" />
	     </LinearLayout>
	     <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:id="@+id/tv_email_reg"
	                android:layout_width="60dip"
	                android:layout_height="wrap_content"
	                android:text="@string/email" />
	
	            <EditText
	                android:id="@+id/et_email_reg"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:inputType="textEmailAddress" >
	            </EditText>
	
	            <ImageView
	                android:id="@+id/img_email_reg"
	                android:layout_width="18dip"
	                android:layout_height="match_parent"
	                android:contentDescription="@string/email_status"
	                android:src="@drawable/ok" />
	      </LinearLayout>
	      <LinearLayout 
	          	android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal">
	            <Button
	                android:id="@+id/btn_reset_reg"
	                android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_weight="1"
		        	android:text="@string/btnreset">
            	</Button>
            	
	            <Button
	                android:id="@+id/btn_register_reg"
	                android:layout_width="fill_parent"
		        	android:layout_height="wrap_content"
		        	android:layout_weight="1"
		        	android:text="@string/btnregister">
            	</Button> 
	      </LinearLayout>
      </LinearLayout>
</RelativeLayout>