<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <LinearLayout 
         android:layout_height="wrap_content"
	     android:layout_width="match_parent"
	     android:orientation="vertical">
	    
        <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal">
	        <TextView 
		        android:id="@+id/tv_orgnumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_orgnumber"/>
	        <EditText 
	            android:id="@+id/et_orgnumber"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="phone"/>
	    </LinearLayout> 
        
	    <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal">
	        <TextView 
		        android:id="@+id/tv_modifynumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_resetnumber"/>
	        <EditText 
	            android:id="@+id/et_modifynumber"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="phone"/>
	    </LinearLayout> 
	    <LinearLayout 
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="horizontal">
	        <TextView 
		        android:id="@+id/tv_confirmnumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_confirmnumber"/>
	        <EditText 
	            android:id="@+id/et_confirmnumber"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="phone"/>
	    </LinearLayout> 
	    <LinearLayout 
			    android:layout_height="wrap_content"
			    android:layout_width="match_parent"
			    android:orientation="horizontal">
	        <Button 
	            android:id="@+id/btn_commit"
	            android:layout_height="wrap_content"
			    android:layout_width="match_parent"
			    android:text="@string/btnok"
	         />
	    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
